Added ability trigger customisation (#2580)